# crypto_api

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: main.cpp
source/private/chart/: chart.cpp
source/private/neural_network/: main.cpp
source/private/socket/: socket.cpp  socket_curl.cpp  socket_utils.cpp
source/private/stock_api/: stock_api.cpp  stock_api_cdc.cpp  stock_api_utils.cpp
source/public/chart/: chart.h
source/public/socket/: socket.h  socket_curl.h  socket_utils.h
source/public/stock_api/: stock_api.h  stock_api_cdc.h  stock_api_utils.h
source/public/transfer_protocol/: transfer_protocol.h
source/tests/: api_crypto_dot_com_api_tests.cpp  api_crypto_dot_com_test_vars.h  api_crypto_dot_com_tests.cpp
